--- a/client/package.json
+++ b/client/package.json
@@ -1,73 +1,51 @@
 {
-  "name": "client",
-  "private": true,
-  "version": "0.0.0",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "vitest"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose",
+    "test:one": "node --experimental-vm-modules node_modules/jest/bin/jest.js --verbose",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch --verbose",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --coverage --verbose",
+    "test:coverage:one": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --verbose",
+    "usernames:backfill": "node scripts/backfillUsernames.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@ckeditor/ckeditor5-react": "^11.0.0",
-    "@hookform/resolvers": "^5.2.2",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@reduxjs/toolkit": "^2.9.0",
+    "@faker-js/faker": "^9.9.0",
+    "@getbrevo/brevo": "^3.0.0",
+    "@google/generative-ai": "^0.6.0",
+    "@langchain/core": "^0.3.0",
+    "@langchain/google-genai": "^0.1.0",
     "axios": "^1.7.7",
-    "ckeditor5": "^47.0.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "entities": "^7.0.0",
-    "firebase": "^12.3.0",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.544.0",
-    "moment": "^2.30.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-dropzone": "^14.3.8",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.63.0",
-    "react-icons": "^5.5.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.1",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
+    "nodemon": "^3.1.10",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.4.1",
-    "redux-persist": "^6.0.0",
     "slugify": "^1.6.6",
-    "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.9"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
-    "@tailwindcss/vite": "^4.1.13",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^24.5.2",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.2",
-    "@vitest/coverage-v8": "^4.0.8",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.35.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "jsdom": "^27.1.0",
-    "postcss": "^8.5.6",
-    "prettier": "^3.6.2",
-    "tailwindcss": "^4.1.13",
-    "tw-animate-css": "^1.3.8",
-    "vite": "^7.1.6",
-    "vitest": "^4.0.8"
+    "@babel/preset-env": "^7.28.5",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "mongodb-memory-server": "^10.3.0",
+    "supertest": "^7.1.4"
   }
 }
